--- a/PortSwiggerLabs/Clickjacking/click_jacking_template.html
+++ b/PortSwiggerLabs/Clickjacking/click_jacking_template.html
@@ -2,15 +2,15 @@
 	<style>
 		#target_website {
 			position:relative;
-			width:128px;
-			height:128px;
+			top: 0px;
+			left: 0px;
 			opacity:0.00001;
 			z-index:2;
 			}
 		#decoy_website {
 			position:absolute;
-			width:300px;
-			height:400px;
+			width:1280px;
+			height:800px;
 			z-index:1;
 			}
 	</style>
